Mantis ChangeLog

2004.xx.xx  -  0.19.0xx

 * Enh #3804: Add ability to filter on view state
 * Enh #3805: Add ability to filter on bugs monitored by a user
 * Enh #3944: Add ability to filter on 'Fixed in Version'
 * Enh #3974: Make Mantis issues searchable by Search Engine
 * Enh #4016: Automatic language selection based on browser preferences
 * Enh #4038: Add icon to sponsorships to attract attention (vboctor)
 * Fix #4005: Signup for new account - invalid username generates crash
 * Fix #4017:  Random translations popping up
 * Fix #4018: Real name field allows potentially dangerous HTML
 * Fix #4020: Database field 'realname' not found after plain installation (vboctor)
 * Fix #4027: Database query error on text search
 * Fix #4040: Sponsorship timestamp is not displayed correctly in sponsorship list (vboctor)
 * Fix #4044: Cross Site Scripting Vulnerability
 * New Config: fallback_language (default 'english') - Fallback language for automatic language selection..
 * Updated German, Italian, and Brazilian Portuguese languages.

2004.07.07  -  0.19.0a1

This is an alpha version of 0.19.0, it is not recommended for production use.  Users are encouraged to test it on a backup copy of their data and provide feedback to development team.

Users installing Mantis for the first time should sql/db_generate.sql to create the database, then run the http://www.example.com/mantis/admin and run the upgrade scripts.  Already existing users will need to backup their database, then run upgrade.

 * Enh #0000: Change of terminology, replaced "bug" with "issue" [first step in #2710].
 * Enh #0000: Generate one email per user. Stage #2 (minor send mail optimization - used kept alive SMTP connection).
 * Enh #0000: phpMailer 1.71 has been included to Mantis distribution, all the mails are sent now only by phpMailer.
 * Enh #0000: Mass issue manipulation (move, delete, etc.) page now shows list of selected issues.
 * Enh #2200: Add Version to simple bug pages.