@@ -7,9 +7,10 @@ Mantis ChangeLog
  * Enh #3944: Add ability to filter on 'Fixed in Version'
  * Enh #3974: Make Mantis issues searchable by Search Engine
  * Enh #4016: Automatic language selection based on browser preferences
+ * Enh #4036: Changelog should not display versions with no issues (vboctor)
  * Enh #4038: Add icon to sponsorships to attract attention (vboctor)
  * Fix #4005: Signup for new account - invalid username generates crash
- * Fix #4017:  Random translations popping up
+ * Fix #4017: Random translations popping up
  * Fix #4018: Real name field allows potentially dangerous HTML
  * Fix #4020: Database field 'realname' not found after plain installation (vboctor)
  * Fix #4027: Database query error on text search
